- preparing for crystal 0.4.0

--- a/crystal.yml
+++ b/crystal.yml
@@ -20,58 +20,12 @@ doc:
         title: Output
 
 gen:
-  file:
-    bower:
-      dest: bower.json
-      decoder: yaml
-      encoder: json
-    bowerrc:
-      dest: .bowerrc
-      type: json
-  schema:
-    analytics:
-      type: string
-    ca:
-      type: string
-    color:
-      type: string
-    cwd:
-      type: string
-    dependencies:
-      key: dependency
-      type: object
-      value: version
-    directory:
-      type: string
-    https-proxy:
-      type: string
-    interactive:
-      type: string
-    name:
-      type: string
-    registry_publish:
-      type: string
-    registry_search:
-      key: search
-      type: array
-    registry_register:
-      type: string
-    proxy:
-      type: string
-    storage_cache:
-      type: string
-    storage_registry:
-      type: string
-    shorthand-resolver:
-      type: string
-    strict-ssl:
-      type: string
-    timeout:
-      type: number
-    tmp:
-      type: string
-    user-agent:
-      type: string
+  bower.json:
+    encoder: json
+
+schema:
+  type: object
+  additionalProperties: false
 
 generators:
   gitignore:
